fix: circle images on the adoption page not showing, changed file paths

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -238,33 +238,30 @@ iframe {
 
 #dog-circle-img {
   /* --- credits #5 (?) Love running project --- */
-  background: url(/assets/img/dog-02.jpg) no-repeat center center;
+  background: url(../../assets/img/dog-02.jpg) no-repeat center center;
   height: 100%;
   width: 100%;
   border-radius: 50%;
-  size: inherit;
   background-size: cover;
   margin: auto;
 }
 
 #cat-circle-img {
   /* --- credits #5 (?) Love running project --- */
-  background: url(/assets/img/cat-02.jpg) no-repeat center center;
-  height: 100%;
+  background: url(../../assets/img/cat-02.jpg) no-repeat center center;
+  /height: 100%;
   width: 100%;
   border-radius: 50%;
-  size: inherit;
   background-size: cover;
   margin: auto;
 }
 
 #all-circle-img {
   /* --- credits #5 (?) Love running project --- */
-  background: url(/assets/img/dog-and-cat.jpg) no-repeat center center;
+  background: url(../../assets/img/dog-and-cat.jpg) no-repeat center center;
   height: 100%;
   width: 100%;
   border-radius: 50%;
-  size: inherit;
   background-size: cover;
   margin: auto;
 }
